kubernetes-starter/namespace.yaml
# namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hotel-quotes
  labels:
    project: grand-residency
    env: learning
